This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.47 (UNRELEASED)

 * Enhancements:
   - Updated translations

 * Bug fixes:

0.46 (2016-03-13)

 * Enhancements:

 * Bug fixes:
   - Searches are now accent-insensitive (LP: #1488333)
   - PEP 8 cleanup

0.45 (2016-02-17)

 * Enhancements:
   - Added new pasaffe-cli command-line interface, thanks to C de-Avillez.

 * Bug fixes:
   - Specify Gtk version to prevent warning
   - Stop using deprecated find icon

0.44 (2015-07-30)

 * Enhancements:

 * Bug fixes:
   - PEP 8 cleanup
   - No longer hardcode icon location (LP: #1459823)

0.43 (2015-03-08)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Make sure left pane is focused on startup

0.42 (2015-02-05)

 * Enhancements:
   - Updated translations
   - Slightly improve preferences dialog layout

 * Bug fixes:
   - Fix more GTK deprecations

0.41 (2014-11-03)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fixed a regression in 0.40 that added extra lines in notes at
     each save

0.40 (2014-11-02)

 * Enhancements:
   - Updated translations
   - Store notes field with CRLF in the database for interopability
     reasons
   - Add a raw dump option to pasaffe-dump-db

 * Bug fixes:
   - Properly handle databases that don't contain username or password
     fields (LP: #1384710)
   - Make sure all dialogs have transient parents (LP: #1386064)
   - Stop using deprecated Gtk stock items (LP: #1386064)
   - Disable menu and toolbar entries for missing fields

0.39 (2014-07-31)

 * Enhancements:
   - Improve random password generation
   - Improve layout of database information window
   - Display database file location in information window
   - Corrected title in new entry and new folder windows (LP: #1314950)
   - Edit button in toolbar now also edits folders (LP: #1350294)

 * Bug fixes:
   - Fixed [icon] text in help file, and license text. (LP: #1314956)
